--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,16 @@ dependencies {
     compile group: 'org.jline', name: 'jline', version: '3.12.0'
     compile group: 'io.bretty', name: 'console-table-builder', version: '1.2'
     compile group: 'com.github.jsqlparser', name: 'jsqlparser', version: '2.0'
+    
+    //---------------------------------
+    compile 'org.apache.httpcomponents:httpclient:4.5.3'
+    compile "org.springframework.boot:spring-boot-starter-web:2.2.2.RELEASE"
+    compileOnly 'org.projectlombok:lombok:1.18.6'
+    annotationProcessor 'org.projectlombok:lombok:1.18.6'
+    // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.11.0'
+
+
     testCompile group: 'junit', name: 'junit', version: '4.1'
 }
 
