--- a/build.gradle
+++ b/build.gradle
@@ -33,9 +33,11 @@ dependencies {
     compile group: 'org.jline', name: 'jline', version: '3.12.0'
     compile group: 'io.bretty', name: 'console-table-builder', version: '1.2'
     compile group: 'com.github.jsqlparser', name: 'jsqlparser', version: '2.0'
-    
-    //---------------------------------
-    compile 'org.apache.httpcomponents:httpclient:4.5.3'
+
+   compile fileTree(dir:'lib',includes:['*jar'])
+    //compile 'org.apache.httpcomponents:httpclient:4.5.12'
+    compile 'org.apache.httpcomponents:httpcore:4.4.13'
+  // compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5'
     compile "org.springframework.boot:spring-boot-starter-web:2.2.2.RELEASE"
     compileOnly 'org.projectlombok:lombok:1.18.6'
     annotationProcessor 'org.projectlombok:lombok:1.18.6'
