--- a/build.gradle
+++ b/build.gradle
@@ -35,13 +35,11 @@ dependencies {
     compile group: 'com.github.jsqlparser', name: 'jsqlparser', version: '2.0'
 
    compile fileTree(dir:'lib',includes:['*jar'])
-    //compile 'org.apache.httpcomponents:httpclient:4.5.12'
+    compile 'org.apache.httpcomponents:httpclient:4.5.11'
     compile 'org.apache.httpcomponents:httpcore:4.4.13'
-  // compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5'
     compile "org.springframework.boot:spring-boot-starter-web:2.2.2.RELEASE"
     compileOnly 'org.projectlombok:lombok:1.18.6'
     annotationProcessor 'org.projectlombok:lombok:1.18.6'
-    // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.11.0'
 
 
