--- a/build.gradle
+++ b/build.gradle
@@ -62,6 +62,7 @@ configurations {
     all*.exclude group: 'org.apache.httpcomponents', module: 'httpclient'
     all*.exclude group: 'org.mockito', module: 'mockito-core'
     all*.exclude group: 'io.reactivex', module: 'rxjava'
+    all*.exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
   //  all*.exclude group: 'org.ethereum', module: 'solcJ-all'
 }
 
