--- a/build.gradle
+++ b/build.gradle
@@ -27,14 +27,14 @@ check.dependsOn.remove(verifyGoogleJavaFormat)
 
 // In this section you declare the dependencies for your production and test code
 dependencies {
-    compile group: 'org.fisco-bcos', name: 'web3sdk', version: '2.4.0'
+    compile group: 'org.fisco-bcos', name: 'web3sdk', version: '2.5.0'
     compile group: 'commons-codec', name:'commons-codec', version:'1.10'
     compile group: 'org.slf4j', name:'slf4j-log4j12', version:'1.7.25'
     compile group: 'org.jline', name: 'jline', version: '3.12.0'
     compile group: 'io.bretty', name: 'console-table-builder', version: '1.2'
     compile group: 'com.github.jsqlparser', name: 'jsqlparser', version: '2.0'
 
-   compile fileTree(dir:'lib',includes:['*jar'])
+    compile fileTree(dir:'lib',includes:['*jar'])
     compile 'org.apache.httpcomponents:httpclient:4.5.11'
     compile 'org.apache.httpcomponents:httpcore:4.4.13'
     compile "org.springframework.boot:spring-boot-starter-web:2.2.2.RELEASE"
@@ -43,7 +43,7 @@ dependencies {
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.11.0'
 
 
-    testCompile group: 'junit', name: 'junit', version: '4.1'
+    compile group: 'junit', name: 'junit', version: '4.1'
 }
 
 configurations.all {
