--- a/build.gradle
+++ b/build.gradle
@@ -38,8 +38,8 @@ dependencies {
     compile 'org.apache.httpcomponents:httpclient:4.5.11'
     compile 'org.apache.httpcomponents:httpcore:4.4.13'
     compile "org.springframework.boot:spring-boot-starter-web:2.2.2.RELEASE"
-    compileOnly 'org.projectlombok:lombok:1.18.6'
-    annotationProcessor 'org.projectlombok:lombok:1.18.6'
+//    compileOnly 'org.projectlombok:lombok:1.18.12'
+//    annotationProcessor 'org.projectlombok:lombok:1.18.12'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.11.0'
 
 
@@ -63,6 +63,7 @@ configurations {
     all*.exclude group: 'org.mockito', module: 'mockito-core'
     all*.exclude group: 'io.reactivex', module: 'rxjava'
     all*.exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
+    all*.exclude group: 'org.projectlombok', module: 'lombok'
   //  all*.exclude group: 'org.ethereum', module: 'solcJ-all'
 }
 
